--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         }
 
         .background-container {
-            background-image: url('Tarea%20BienBueno.png');
+            background-image: url('images/background.png');
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
